# ChatApp

./: .gitignore  README.md  config.py  main.py  pyproject.toml  rag_pipeline.py
app/static/: chat.js
app/templates/: index.html
models/: models.py
services/: generate_embeddings.py  ingest.py  llm.py  rag_pipeline.py  retriever copy.py  retriever.py  services.py
utils/: chunker.py
